fixed pins initial alignment

--- a/app/common/ch-board/ch-board.less
+++ b/app/common/ch-board/ch-board.less
@@ -8,17 +8,17 @@ ch-board {
       height: 520px;
       margin: 0 auto;
       
-      .fieldHolder {
+      .fields {
         width: 480px;
         height: 480px;
         margin: 0;
-        
-        .pinHolder {
-          position: absolute;
-          left: 20px;
-          top: 20px;
-          //must be of size 0x0 for elements behind to register mouse events.
-        }
+      }
+
+      .pins {
+        position: absolute;
+        left: 20px;
+        top: 20px;
+        //must be of size 0x0 for elements behind to register mouse events.
       }
     }
   }
